# wargaming-test-task

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  utility.cpp  utility.h
test_files/: file1.txt  file2.txt  file3.txt  file4.txt
